--- a/webapp/templates/template.xhtml
+++ b/webapp/templates/template.xhtml
@@ -24,6 +24,7 @@
 			    <div class="content">
 					<ui:insert name="content">Default Content</ui:insert>	
 			    </div>
+			    <div class="dummy"></div>
 		    </div>
 		    <div class="footer">
 				<ui:insert name="footer">Default Footer</ui:insert>	
