--- a/webapp/resources/styles/hsar.css
+++ b/webapp/resources/styles/hsar.css
@@ -54,6 +54,9 @@ body {
   padding-left:0px; 
   padding-right:0px; 
 }
+.dummy {
+  clear:both;
+}
 .content {
   width:606px; 
   margin-left:304px;
